--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,22 @@
 {
 	"compilerOptions": {
-		"module": "Node16",
-		"target": "ES2022",
-		"lib": [
-			"ES2022"
-		],
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
-}
+	  "module": "CommonJS",
+	  "target": "ES2020",
+	  "lib": [
+		"ES2020"
+	  ],
+	  "outDir": "./dist",
+	  "sourceMap": true,
+	  "rootDir": "src",
+	  "strict": true,
+	  "esModuleInterop": true,
+	  "skipLibCheck": true,
+	  "forceConsistentCasingInFileNames": true,
+	  /* Additional Checks */
+	  // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
+	  // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
+	  // "noUnusedParameters": true, /* Report errors on unused parameters. */
+	},
+	"exclude": ["node_modules", "dist"]
+  }
+  
