--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "displayName": "wingmen",
   "publisher": "DewaangMathur",
   "description": "Code completion using AI21 LABS",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.92.0"
   },
+  "galleryBanner": {
+    "color": "#FFFFFF",
+    "theme": "dark"
+  },
+  "icon": "logo.jpeg",
   "categories": [
     "Other"
   ],
